--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
   <link href="static/css/style-responsive.css" rel="stylesheet" type="text/css"/>
   <link href="static/css/themes/light.css"  rel="stylesheet" type="text/css" id="style_color"/>
   <link href="static/plugins/uniform/css/uniform.default.css"  rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="static/css/datetimepicker.css"/>
   <!-- END GLOBAL MANDATORY STYLES -->
   <link rel="shortcut icon" href="favicon.ico" />
   <script type="text/javascript">
@@ -273,9 +274,14 @@
   </script>
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   </script>
- 
+  <script src="static/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
   <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
+  <script src="static/app/scripts/vendor/moment.min.js"></script>
+  <script src="static/app/scripts/vendor/datetimepicker.js"></script>
+
+
+
 
 
   <script src="static/app/scripts/services/accountservices.js"></script>
@@ -283,6 +289,7 @@
 
   <!--script src="static/app/scripts/services/services.js" ></script-->
   <script src="static/app/scripts/services/topicservices.js" ></script>
+  <script src="static/app/scripts/services/taskservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
@@ -294,7 +301,8 @@
   <script src="static/app/scripts/services/leadservices.js" ></script>
   <!-- IMPORTANT! Load jquery-ui-1.10.1.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
   <script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      
-  <script src="static/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  
+   <script type="text/javascript" src="static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
   <script src="static/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript" ></script>
   <!--[if lt IE 9]>
   <script src="static/plugins/excanvas.min.js"></script>
@@ -304,6 +312,7 @@
   <script src="static/plugins/jquery.blockui.min.js" type="text/javascript"></script>  
   <script src="static/plugins/jquery.cookie.min.js" type="text/javascript"></script>
   <script src="static/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
+
   <!-- END CORE PLUGINS -->
   
 
