--- a/templates/base.html
+++ b/templates/base.html
@@ -290,6 +290,7 @@
   <!--script src="static/app/scripts/services/services.js" ></script-->
   <script src="static/app/scripts/services/topicservices.js" ></script>
   <script src="static/app/scripts/services/taskservices.js" ></script>
+  <script src="static/app/scripts/services/eventservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
