HKA 06.11.13 Merge opportunity events tasks

--- a/templates/base.html
+++ b/templates/base.html
@@ -286,6 +286,7 @@
 
   <script src="static/app/scripts/services/accountservices.js"></script>
   <script src="static/app/scripts/services/contactservices.js"></script>
+  <script src="static/app/scripts/services/opportunityservices.js"></script>
   
 
   <!--script src="static/app/scripts/services/services.js" ></script-->
