--- a/templates/base.html
+++ b/templates/base.html
@@ -231,7 +231,7 @@
        window.is_signed_in = false;
        window.authResult = undefined;
        var apisToLoad;
-       var ROOT = '/_ah/api';
+       var ROOT = 'https://iogrow-dev.appspot.com/_ah/api';
        var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
@@ -292,15 +292,19 @@
   <script src="static/app/scripts/services/topicservices.js" ></script>
   <script src="static/app/scripts/services/taskservices.js" ></script>
   <script src="static/app/scripts/services/eventservices.js" ></script>
+  <script src="static/app/scripts/services/leadservices.js" ></script>
+  <script src="static/app/scripts/services/userservices.js"></script>
 
   <script src="static/app/scripts/app.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
+  <!--Admin controllers-->
+  <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   
 
   <script src="static/app/scripts/controllers/leadcontrollers.js" ></script>
-  <script src="static/app/scripts/services/leadservices.js" ></script>
+  
   <!-- IMPORTANT! Load jquery-ui-1.10.1.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
   <script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      
   
