--- a/templates/base.html
+++ b/templates/base.html
@@ -295,11 +295,13 @@
   <script src="static/app/scripts/services/leadservices.js" ></script>
   <script src="static/app/scripts/services/userservices.js"></script>
   <script src="static/app/scripts/services/groupservices.js"></script>
+  <script src="static/app/scripts/services/showservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
+  <script src="static/app/scripts/controllers/showcontrollers.js" ></script>
   <!--Admin controllers-->
   <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
